update sensitivity analyses

--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -243,7 +243,7 @@ The incorporation of light stress in the model sets an upper limit to the amount
 
 Each default parameter value used in the model (Table 2) is based on carefully selected relevant literature. A supplementary document detailing the derivations of each of these default parameter values is provided. Nevertheless, it is important to evaluate the sensitivity of the model to changes in these parameter values. We measured fractional change in steady state values in response to fractional change in parameter values, relative to their default values (Table 2).
 
-![Sensitivity analysis. Plots show the fractional change in steady state values in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by which processes they are involved in. Sensitivity in response to changes in each parameter was evaluated in each of four environments (indicated by line type): 1) LLLN=low light (2 mol ph m^-2^ d^-1^) and low DIN (1e-7 mol L^-1^), 2) LLHN=low light (2 mol ph m^-2^ d^-1^) and high DIN (4e-6 mol L^-1^), 3) HLLN=high light (30 mol ph m^-2^ d^-1^) and low DIN (1e-7 mol L^-1^), and 4) HLHN=high light (30 mol ph m^-2^ d^-1^) and high DIN (4e-6 mol L^-1^).](../img/Fig3.png)
+![Sensitivity analysis. Plots show the fractional change in steady state values of growth (solid lines) and S:H biomass (dashed lines) in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by which processes they are involved in. This sensitivity analysis was conducted at conditions typical for coral reef environments: low DIN (1e-7 M) and intermediate light (15 mol m^-2^ d^-2^). Sensitivity analyses conducted other environmental conditions are presented in the Supplementary Information.](../img/Fig3.png)
 
 ## Dynamic behavior
 Therefore, we are highly interested in the conditions under which the system switches from one state to another, representing the conditions under which corals "bleach" due to progressive, reinforcing carbon-limitation. Interestingly, this state can be reached in multiple ways, by the acceleration of photoinhibition and photodamage, or by high external DIN, which causes the symbiont to share less carbon, subsequently causing its own CO2-limitation, and progressive C-limitation of the system.
