--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -66,7 +66,7 @@
 \hypersetup{breaklinks=true,
             bookmarks=true,
             pdfauthor={},
-            pdftitle={A simplified dynamic bioenergetic model for coral bleaching},
+            pdftitle={A simplified dynamic bioenergetic model for coral-algal symbiosis and coral bleaching},
             colorlinks=true,
             urlcolor=blue,
             linkcolor=magenta,
@@ -86,7 +86,8 @@
 \begin{document}
 \begin{frontmatter}
 
-  \title{A simplified dynamic bioenergetic model for coral bleaching}
+  \title{A simplified dynamic bioenergetic model for coral-algal symbiosis and
+coral bleaching}
     \author[University of Hawaii]{Ross Cunning\corref{c1}}
    \ead{ross.cunning@gmail.com} 
    \cortext[c1]{Corresponding Author}
@@ -1051,25 +1052,26 @@ interpret these dynamics in the context of coral bleaching.
 To analyze qualitative behavior, we ran the model to steady state across
 gradients of external irradiance and nutrients (Fig. 2), which revealed
 patterns consistent with observed phenomena in corals. Predicted growth
-rates are low at low light and DIN, and begin increasing as both of
-these factors increase (Fig. 2A). Low light is limiting to
-photosynthesis (Fig. 2D), which leads to carbon-limitation of host
-growth (Fig. 2B) and an associated increase in the symbiont to host
-biomass ratio (Fig. 2C). In agreement with this trend are many
-observations of negative correlation between irradiance and symbiont
-density (Stimson 1997; Brown et al. 1999; Fitt et al. 2000; Titlyanov et
-al. 2001). As higher light alleviates light-limitation of
-photosynthesis, growth becomes less carbon-limited. Similarly, elevating
-DIN up to \textasciitilde{}2 µM alleviates nitrogen-limitation (Fig.
-2B). Increased growth at higher DIN is predicted by the DEB model of
-Muller et al. (2009), and has also been observed experimentally
-(Muller-Parker et al. 1994; Tanaka et al. 2007; Tanaka et al. 2013).
-However, DIN elevation beyond a certain point (e.g., 2-3 µM in these
-simulations) has little effect on growth as carbon becomes limiting
-(Fig. 2B). Very high nutrient levels may even reduce growth (Shantz,
-Lemoine, and Burkepile 2015), although these impacts are not likely to
-occur within the range of concentrations considered here (\textless{}4
-µM) (Ferrier-Pagès et al. 2000).
+rates are low at low light and DIN (\textasciitilde{}0.01
+d\textsuperscript{-1}), and begin increasing as both of these factors
+increase (Fig. 2A). Low light is limiting to photosynthesis (Fig. 2D),
+which leads to carbon-limitation of host growth (Fig. 2B) and an
+associated increase in the symbiont to host biomass ratio (Fig. 2C). In
+agreement with this trend are many observations of negative correlation
+between irradiance and symbiont density (Stimson 1997; Brown et al.
+1999; Fitt et al. 2000; Titlyanov et al. 2001). As higher light
+alleviates light-limitation of photosynthesis, growth becomes less
+carbon-limited. Similarly, elevating DIN up to \textasciitilde{}2 µM
+alleviates nitrogen-limitation (Fig. 2B). Increased growth at higher DIN
+is predicted by the DEB model of Muller et al. (2009), and has also been
+observed experimentally (Muller-Parker et al. 1994; Tanaka et al. 2007;
+Tanaka et al. 2013). However, DIN elevation beyond a certain point
+(e.g., \textasciitilde{}3-4 µM in these simulations) has little effect
+on growth as carbon becomes limiting (Fig. 2B). Very high nutrient
+levels may even reduce growth (Shantz, Lemoine, and Burkepile 2015),
+although these impacts are not likely to occur within the range of
+concentrations considered here (\textless{}4 µM) (Ferrier-Pagès et al.
+2000).
 
 In addition to increasing growth, DIN also increases the symbiont to
 host biomass ratio, a phenomenon also observed in reef corals (Marubini
@@ -1098,19 +1100,19 @@ ratios, were set to zero.}
 \end{figure}
 
 The maximum predicted growth rates of \textasciitilde{}0.1
-d\textsuperscript{-1}, occurring between \textasciitilde{}10-15 mol
+d\textsuperscript{-1}, occurring between \textasciitilde{}10-20 mol
 photons m\textsuperscript{-2} s\textsuperscript{-1} light and
-\textgreater{}\textasciitilde{}3 µM DIN (Fig. 2A), are comparable to the
-rate of 0.07 d\textsuperscript{-1} measured by Tanaka et al. (2007)
-under similar N-enriched conditions. Growth under conditions more
-typical of reef environments (\textless{}0.5 µM DIN) are within the
-range of \textasciitilde{}0.01-0.05 d\textsuperscript{-1}; however,
-these values are still higher than most specific growth rates reported
-in the literature, which are typically based on skeletal mass, and fall
-near or below 0.01 d\textsuperscript{-1} (Osinga et al. 2011; Osinga et
-al. 2012) (though values as high as 0.025 d\textsuperscript{-1} have
-been reported (Schutter et al. 2010)). These generally low skeletal
-growth rates relative to predicted biomass growth may be explained by
+\textasciitilde{}4 µM DIN (Fig. 2A), are comparable to the rate of 0.07
+d\textsuperscript{-1} measured by Tanaka et al. (2007) under similar
+N-enriched conditions. Growth under conditions more typical of reef
+environments (\textless{}0.5 µM DIN) are within the range of
+\textasciitilde{}0.01-0.03 d\textsuperscript{-1}; these values are
+slightly higher than most specific growth rates reported in the
+literature, which are typically based on skeletal mass, and fall near or
+below 0.01 d\textsuperscript{-1} (Osinga et al. 2011; Osinga et al.
+2012) (though values as high as 0.025 d\textsuperscript{-1} have been
+reported (Schutter et al. 2010)). These generally low skeletal growth
+rates relative to predicted biomass growth may be explained by
 differential substrate-limitation (i.e., CO\textsubscript{2} may limit
 calcification, which is not present in the model); indeed, tissue and
 skeletal growth may not always be well correlated (Anthony 2002).
@@ -1122,28 +1124,28 @@ in Tanaka et al. (2007)), and similar rates (0.04 d\textsuperscript{-1})
 have been measured in \emph{Aiptasia diaphana}, a non-calcifying
 symbiotic anemone (Armoza-Zvuloni et al. 2014).
 
-As irradiance continues to increase above \textasciitilde{}15-20 mol
+As irradiance continues to increase above \textasciitilde{}20 mol
 photons m\textsuperscript{-2} d\textsuperscript{-1}, growth rates
-decline until positive growth ceases above \textasciitilde{}30 µmol
+decline until positive growth ceases above \textasciitilde{}35 µmol
 photons m\textsuperscript{-2} d\textsuperscript{-1}. The mechanism
 underlying this decline is the increase in light energy beyond the
 capacity of photosynthesis and non-photochemical quenching: excess
 excitation energy generates reactive oxygen species (ROS) (Weis 2008;
 Roth 2014), which, in this model, have the phenomenological consequences
 of reducing the photosynthetic rate (representing photoinhibition) and
-increasing the symbiont biomass loss rate (representing photodamage
-and/or symbiont expulsion) (see Eynaud, Nisbet, and Muller 2011).
-Together, these impacts reduce the symbiont to host biomass ratio (Fig.
-2C), as occurs during coral bleaching. This reduction in symbionts
-consequently reduces the flux of fixed carbon to the host, resulting in
-increasing carbon-limitation (Fig. 2B) and eventual cessation of growth
-(Fig. 2A). Importantly, these consequences arise in the present model
-only when light energy exceeds the capacity of photochemistry and NPQ,
-which in turn depends on CO\textsubscript{2} availability. While
-previous models framed photophysiological stress as a fixed response to
-absolute irradiance levels (Eynaud, Nisbet, and Muller 2011), the
-current implementation considers the dynamic balance of multiple energy
-sinks in the causation of stress, which is more consistent with current
+increasing symbiont biomass loss (representing photodamage and/or
+symbiont expulsion) (see Eynaud, Nisbet, and Muller 2011). Together,
+these impacts reduce the symbiont to host biomass ratio (Fig. 2C), as
+occurs during coral bleaching. This reduction in symbionts consequently
+reduces the flux of fixed carbon to the host, resulting in increasing
+carbon-limitation (Fig. 2B) and eventual cessation of growth (Fig. 2A).
+Importantly, these consequences arise in the present model only when
+light energy exceeds the capacity of photochemistry and NPQ, which in
+turn depends on CO\textsubscript{2} availability. While previous models
+framed photophysiological stress as a fixed response to absolute
+irradiance levels (Eynaud, Nisbet, and Muller 2011), the current
+implementation considers the dynamic balance of multiple energy sinks in
+the causation of stress, which is more consistent with current
 understanding of symbiosis dysfunction (Wooldridge 2013), and
 establishes an important role of the host in providing
 CO\textsubscript{2} for symbiont photosynthesis (Tansik, Fitt, and
@@ -1208,19 +1210,14 @@ parameter values, relative to their default values (Table 2).
 \centering
 \includegraphics{../img/Fig3.png}
 \caption{Sensitivity analysis. Plots show the fractional change in
-steady state values in response to fractional changes in default
-parameter values (see Table 2 for default values). Parameters are
-grouped by which processes they are involved in. Sensitivity in response
-to changes in each parameter was evaluated in each of four environments
-(indicated by line type): 1) LLLN=low light (2 mol ph
-m\textsuperscript{-2} d\textsuperscript{-1}) and low DIN (1e-7 mol
-L\textsuperscript{-1}), 2) LLHN=low light (2 mol ph
-m\textsuperscript{-2} d\textsuperscript{-1}) and high DIN (4e-6 mol
-L\textsuperscript{-1}), 3) HLLN=high light (30 mol ph
-m\textsuperscript{-2} d\textsuperscript{-1}) and low DIN (1e-7 mol
-L\textsuperscript{-1}), and 4) HLHN=high light (30 mol ph
-m\textsuperscript{-2} d\textsuperscript{-1}) and high DIN (4e-6 mol
-L\textsuperscript{-1}).}
+steady state values of growth (solid lines) and S:H biomass (dashed
+lines) in response to fractional changes in default parameter values
+(see Table 2 for default values). Parameters are grouped by which
+processes they are involved in. This sensitivity analysis was conducted
+at conditions typical for coral reef environments: low DIN (1e-7 M) and
+intermediate light (15 mol m\textsuperscript{-2} d\textsuperscript{-2}).
+Sensitivity analyses conducted other environmental conditions are
+presented in the Supplementary Information.}
 \end{figure}
 
 \subsection{Dynamic behavior}\label{dynamic-behavior}
