--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(message = F, warning = F)
 # Source default parameters and functions
 sapply(c("R/conversions.R", "R/def_pars.R", "R/init_env.R", "R/plot_results.R",
          "R/run_coral.R", "R/run_coral_ss.R", "R/sym_PI.R", "R/run_steady_states.R", 
-         "R/plot_steady_states.R", "R/explore_NPQ.R"), source, .GlobalEnv)
+         "R/plot_steady_states.R", "R/sensitivity.R"), source, .GlobalEnv)
 # Get default parameters
 defpars <- def_pars()
 ```
@@ -116,5 +116,321 @@ text(0.13,2.9, labels=paste0(c("x=",coefs[1],"; y=",coefs[2],"; z=",coefs[3]), c
 ```{r run1_PI, cache=F, fig.height=4, fig.width=7, echo=F, fig.cap="The amount of light energy quenched through photochemistry (red line) and non-photochemical quenching (black line), and the relative production of reactive oxygen species (orange line) are plotted as a function of the scalar irradiance experienced by the symbiont (note different y-axes for each line). These simulations represent the behavior of the photosynthesis SU independent of the host and without CO~2~ limitation of photosynthesis (*j~CO2~* set to a very high value). The structure of the photosynthesis SU, with the negative feedback between excess light and photosynthesis rate, produces the classic shape of a P-I curve demonstrating photoinhibition, suggesting the mechanism is robust."}
 sym_PI(pars=def_pars())
 ```
+
+## Figure S3. Sensitivity analysis under high DIN (4e-6 M) and intermediate light (15 mol m^-2^ d^-1^).
+```{r sens_ILHN, cache=T, echo=F}
+# Set up time vector and parameters
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "initS", 1)  # Start with high S biomass to avoid alternate steady state of negative growth
+
+# Define environments for conducting sensitivity analysis
+envs <- list(
+  ILHN=list(L=15, N=4e-6, X=0)
+)
+
+# Define relative changes in each parameter to evaluate
+levs <- seq(0.5, 1.5, 0.05)  # Set levels of % change in parameter value to evaluate
+
+# Define all simulations to be run for a given parameter
+sims <- expand.grid(env=names(envs), change=levs)
+n <- nrow(sims)
+
+# Set up cluster for parallel processing
+cl <- makeCluster(detectCores())  # Initiate cluster
+registerDoParallel(cl)
+
+# Run sensitivity analysis in each environment for each parameter
+jHT0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHT0", change=change))
+jNm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jNm", change=change))
+jHGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHGm", change=change))
+kCO2.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kCO2", change=change))
+KN.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="KN", change=change))
+jST0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jST0", change=change))
+kNPQ.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kNPQ", change=change))
+kROS.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kROS", change=change))
+astar.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="astar", change=change))
+jCPm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jCPm", change=change))
+jSGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jSGm", change=change))
+b.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="b", change=change))
+
+stopCluster(cl)  # Stop cluster
+
+# Combine output with input
+sens.all <- ls(pattern="*.sens")
+for (i in 1:length(sens.all)) {
+  assign(sens.all[i], cbind(sims, get(sens.all[i])))
+}
+
+# When growth rate becomes negative, set all responses to NA
+for (i in 1:length(sens.all)) {
+  if (any(get(sens.all[i])$grchange < 0, na.rm=T)) {
+    assign(sens.all[i], within(get(sens.all[i]), {
+      shchange <- replace(shchange, grchange < 0, NA)
+      cROSchange <- replace(cROSchange, grchange < 0, NA)
+      grchange <- replace(grchange, grchange < 0, NA)
+    }))
+  }
+}
+
+# Plot Figure
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(2,0.5,0))
+sens.plot(response=c("grchange", "shchange"), pars=c("jCPm", "kCO2", "astar"), cols=c("black", "red", "gold"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jNm", "KN"), cols=c("black", "blue"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jHGm"), cols=c("burlywood4", "burlywood3", "darkolivegreen4", "darkolivegreen3"))
+sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
+```
+
+## Figure S4. Sensitivity analysis under low DIN (1e-7 M) and low light (2 mol m^-2^ d^-1^).
+```{r sens_LLLN, cache=T, echo=F}
+# Set up time vector and parameters
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "initS", 1)  # Start with high S biomass to avoid alternate steady state of negative growth
+
+# Define environments for conducting sensitivity analysis
+envs <- list(
+  LLLN=list(L=2, N=1e-7, X=0)
+)
+
+# Define relative changes in each parameter to evaluate
+levs <- seq(0.5, 1.5, 0.05)  # Set levels of % change in parameter value to evaluate
+
+# Define all simulations to be run for a given parameter
+sims <- expand.grid(env=names(envs), change=levs)
+n <- nrow(sims)
+
+# Set up cluster for parallel processing
+cl <- makeCluster(detectCores())  # Initiate cluster
+registerDoParallel(cl)
+
+# Run sensitivity analysis in each environment for each parameter
+jHT0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHT0", change=change))
+jNm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jNm", change=change))
+jHGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHGm", change=change))
+kCO2.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kCO2", change=change))
+KN.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="KN", change=change))
+jST0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jST0", change=change))
+kNPQ.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kNPQ", change=change))
+kROS.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kROS", change=change))
+astar.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="astar", change=change))
+jCPm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jCPm", change=change))
+jSGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jSGm", change=change))
+b.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="b", change=change))
+
+stopCluster(cl)  # Stop cluster
+
+# Combine output with input
+sens.all <- ls(pattern="*.sens")
+for (i in 1:length(sens.all)) {
+  assign(sens.all[i], cbind(sims, get(sens.all[i])))
+}
+
+# When growth rate becomes negative, set all responses to NA
+for (i in 1:length(sens.all)) {
+  if (any(get(sens.all[i])$grchange < 0, na.rm=T)) {
+    assign(sens.all[i], within(get(sens.all[i]), {
+      shchange <- replace(shchange, grchange < 0, NA)
+      cROSchange <- replace(cROSchange, grchange < 0, NA)
+      grchange <- replace(grchange, grchange < 0, NA)
+    }))
+  }
+}
+
+# Plot Figure
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(2,0.5,0))
+sens.plot(response=c("grchange", "shchange"), pars=c("jCPm", "kCO2", "astar"), cols=c("black", "red", "gold"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jNm", "KN"), cols=c("black", "blue"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jHGm"), cols=c("burlywood4", "burlywood3", "darkolivegreen4", "darkolivegreen3"))
+sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
+```
+
+## Figure S5. Sensitivity analysis under high DIN (4e-6 M) and low light (2 mol m^-2^ d^-1^).
+```{r sens_LLHN, cache=T, echo=F}
+# Set up time vector and parameters
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "initS", 1)  # Start with high S biomass to avoid alternate steady state of negative growth
+
+# Define environments for conducting sensitivity analysis
+envs <- list(
+  LLHN=list(L=2, N=4e-6, X=0)
+)
+
+# Define relative changes in each parameter to evaluate
+levs <- seq(0.5, 1.5, 0.05)  # Set levels of % change in parameter value to evaluate
+
+# Define all simulations to be run for a given parameter
+sims <- expand.grid(env=names(envs), change=levs)
+n <- nrow(sims)
+
+# Set up cluster for parallel processing
+cl <- makeCluster(detectCores())  # Initiate cluster
+registerDoParallel(cl)
+
+# Run sensitivity analysis in each environment for each parameter
+jHT0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHT0", change=change))
+jNm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jNm", change=change))
+jHGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHGm", change=change))
+kCO2.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kCO2", change=change))
+KN.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="KN", change=change))
+jST0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jST0", change=change))
+kNPQ.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kNPQ", change=change))
+kROS.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kROS", change=change))
+astar.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="astar", change=change))
+jCPm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jCPm", change=change))
+jSGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jSGm", change=change))
+b.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="b", change=change))
+
+stopCluster(cl)  # Stop cluster
+
+# Combine output with input
+sens.all <- ls(pattern="*.sens")
+for (i in 1:length(sens.all)) {
+  assign(sens.all[i], cbind(sims, get(sens.all[i])))
+}
+
+# When growth rate becomes negative, set all responses to NA
+for (i in 1:length(sens.all)) {
+  if (any(get(sens.all[i])$grchange < 0, na.rm=T)) {
+    assign(sens.all[i], within(get(sens.all[i]), {
+      shchange <- replace(shchange, grchange < 0, NA)
+      cROSchange <- replace(cROSchange, grchange < 0, NA)
+      grchange <- replace(grchange, grchange < 0, NA)
+    }))
+  }
+}
+
+# Plot Figure
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(2,0.5,0))
+sens.plot(response=c("grchange", "shchange"), pars=c("jCPm", "kCO2", "astar"), cols=c("black", "red", "gold"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jNm", "KN"), cols=c("black", "blue"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jHGm"), cols=c("burlywood4", "burlywood3", "darkolivegreen4", "darkolivegreen3"))
+sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
+```
+
+## Figure S6. Sensitivity analysis under low DIN (1e-7 M) and high light (25 mol m^-2^ d^-1^).
+```{r sens_HLLN, cache=T, echo=F}
+# Set up time vector and parameters
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "initS", 1)  # Start with high S biomass to avoid alternate steady state of negative growth
+
+# Define environments for conducting sensitivity analysis
+envs <- list(
+  HLLN=list(L=25, N=1e-7, X=0)
+)
+
+# Define relative changes in each parameter to evaluate
+levs <- seq(0.5, 1.5, 0.05)  # Set levels of % change in parameter value to evaluate
+
+# Define all simulations to be run for a given parameter
+sims <- expand.grid(env=names(envs), change=levs)
+n <- nrow(sims)
+
+# Set up cluster for parallel processing
+cl <- makeCluster(detectCores())  # Initiate cluster
+registerDoParallel(cl)
+
+# Run sensitivity analysis in each environment for each parameter
+jHT0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHT0", change=change))
+jNm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jNm", change=change))
+jHGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHGm", change=change))
+kCO2.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kCO2", change=change))
+KN.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="KN", change=change))
+jST0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jST0", change=change))
+kNPQ.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kNPQ", change=change))
+kROS.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kROS", change=change))
+astar.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="astar", change=change))
+jCPm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jCPm", change=change))
+jSGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jSGm", change=change))
+b.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="b", change=change))
+
+stopCluster(cl)  # Stop cluster
+
+# Combine output with input
+sens.all <- ls(pattern="*.sens")
+for (i in 1:length(sens.all)) {
+  assign(sens.all[i], cbind(sims, get(sens.all[i])))
+}
+
+# When growth rate becomes negative, set all responses to NA
+for (i in 1:length(sens.all)) {
+  if (any(get(sens.all[i])$grchange < 0, na.rm=T)) {
+    assign(sens.all[i], within(get(sens.all[i]), {
+      shchange <- replace(shchange, grchange < 0, NA)
+      cROSchange <- replace(cROSchange, grchange < 0, NA)
+      grchange <- replace(grchange, grchange < 0, NA)
+    }))
+  }
+}
+
+# Plot Figure
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(2,0.5,0))
+sens.plot(response=c("grchange", "shchange"), pars=c("jCPm", "kCO2", "astar"), cols=c("black", "red", "gold"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jNm", "KN"), cols=c("black", "blue"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jHGm"), cols=c("burlywood4", "burlywood3", "darkolivegreen4", "darkolivegreen3"))
+sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
+```
+
+## Figure S7. Sensitivity analysis under high DIN (4e-6 M) and high light (25 mol m^-2^ d^-1^).
+```{r sens_HLHN, cache=T, echo=F}
+# Set up time vector and parameters
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "initS", 1)  # Start with high S biomass to avoid alternate steady state of negative growth
+
+# Define environments for conducting sensitivity analysis
+envs <- list(
+  HLHN=list(L=25, N=4e-6, X=0)
+)
+
+# Define relative changes in each parameter to evaluate
+levs <- seq(0.5, 1.5, 0.05)  # Set levels of % change in parameter value to evaluate
+
+# Define all simulations to be run for a given parameter
+sims <- expand.grid(env=names(envs), change=levs)
+n <- nrow(sims)
+
+# Set up cluster for parallel processing
+cl <- makeCluster(detectCores())  # Initiate cluster
+registerDoParallel(cl)
+
+# Run sensitivity analysis in each environment for each parameter
+jHT0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHT0", change=change))
+jNm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jNm", change=change))
+jHGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jHGm", change=change))
+kCO2.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kCO2", change=change))
+KN.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="KN", change=change))
+jST0.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jST0", change=change))
+kNPQ.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kNPQ", change=change))
+kROS.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="kROS", change=change))
+astar.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="astar", change=change))
+jCPm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jCPm", change=change))
+jSGm.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="jSGm", change=change))
+b.sens <- foreach(i=1:n, .combine=rbind) %dopar% with(sims[i,], sens(env=envs[[env]], pars=defpars, par="b", change=change))
+
+stopCluster(cl)  # Stop cluster
+
+# Combine output with input
+sens.all <- ls(pattern="*.sens")
+for (i in 1:length(sens.all)) {
+  assign(sens.all[i], cbind(sims, get(sens.all[i])))
+}
+
+# When growth rate becomes negative, set all responses to NA
+for (i in 1:length(sens.all)) {
+  if (any(get(sens.all[i])$grchange < 0, na.rm=T)) {
+    assign(sens.all[i], within(get(sens.all[i]), {
+      shchange <- replace(shchange, grchange < 0, NA)
+      cROSchange <- replace(cROSchange, grchange < 0, NA)
+      grchange <- replace(grchange, grchange < 0, NA)
+    }))
+  }
+}
+
+# Plot Figure
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(2,0.5,0))
+sens.plot(response=c("grchange", "shchange"), pars=c("jCPm", "kCO2", "astar"), cols=c("black", "red", "gold"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jNm", "KN"), cols=c("black", "blue"))
+sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jHGm"), cols=c("burlywood4", "burlywood3", "darkolivegreen4", "darkolivegreen3"))
+sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
+```
+
 
 ## References
